--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,9 @@ dist.jar=${dist.dir}/HordeSocialPro.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.javax.mail.jar=C:\\javax.mail.jar
-file.reference.mysql-connector-java-5.1.23-bin.jar=../../../../../mysql-connector-java-5.1.23-bin.jar
-file.reference.SqlQueryGenerator.jar=../../../../../SqlQueryGenerator.jar
+file.reference.javax.mail.jar=lib\\javax.mail.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib\\mysql-connector-java-5.1.23-bin.jar
+file.reference.SqlQueryGenerator.jar=lib\\SqlQueryGenerator.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,8 +39,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.SqlQueryGenerator.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
