--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,9 @@ dist.jar=${dist.dir}/HordeSocialPro.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-8.40.13.jar=C:\\Users\\Mehdi Sarray\\Desktop\\controlfx\\controlsfx-8.40.13.jar
+file.reference.controlsfx-samples-8.40.13.jar=C:\\Users\\Mehdi Sarray\\Desktop\\controlfx\\controlsfx-samples-8.40.13.jar
+file.reference.fxsampler-1.0.10.jar=C:\\Users\\Mehdi Sarray\\Desktop\\controlfx\\fxsampler-1.0.10.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=lib\\mysql-connector-java-5.1.23-bin.jar
 file.reference.SqlQueryGenerator.jar=lib\\SqlQueryGenerator.jar
@@ -40,7 +43,10 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.SqlQueryGenerator.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
+    ${file.reference.controlsfx-8.40.13.jar}:\
+    ${file.reference.controlsfx-samples-8.40.13.jar}:\
+    ${file.reference.fxsampler-1.0.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
