--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
 file.reference.Medusa-5.7.jar=lib\\Medusa-5.7.jar
-file.reference.mysql-connector-java-8.0.15.jar=lib/mysql-connector-java-8.0.15.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=lib/mysql-connector-java-5.1.23-bin.jar
 file.reference.SqlQueryGenerator.jar=lib\\SqlQueryGenerator.jar
 file.reference.tilesfx-1.6.5.jar=lib\\tilesfx-1.6.5.jar
 includes=**
@@ -44,9 +44,9 @@ javac.classpath=\
     ${file.reference.SqlQueryGenerator.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.Medusa-5.7.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.tilesfx-1.6.5.jar}
+    ${file.reference.tilesfx-1.6.5.jar}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
