--- a/src/resources/database/db.properties
+++ b/src/resources/database/db.properties
@@ -1,5 +1,5 @@
-url=jdbc\:mysql\://remotemysql.com\:3306/cGJhppcaot
-user=cGJhppcaot
-password=CeDhRgxXX4
+url=jdbc\:mysql\://localhost\:3306/pidev
+user=root
+password=
 driver=com.mysql.cj.jdbc.Driver
 oldDriver=com.mysql.jdbc.Driver
