--- a/src/resources/database/db.properties
+++ b/src/resources/database/db.properties
@@ -1,4 +1,4 @@
-url=jdbc\:mysql\://localhost\:3306/pidev
+url=jdbc\:mysql\://localhost\:3306/pidev?zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=UTC
 user=root
 password=
 driver=com.mysql.cj.jdbc.Driver
