--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/HordeSocialPro.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.5.13.jar=lib\\itextpdf-5.5.13.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
 file.reference.Medusa-5.7.jar=lib\\Medusa-5.7.jar
@@ -46,7 +47,8 @@ javac.classpath=\
     ${file.reference.Medusa-5.7.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.tilesfx-1.6.5.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${file.reference.itextpdf-5.5.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
