--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/HordeSocialPro.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Bulk_SMS_Library.jar=C:\\Users\\Alai Zid\\Desktop\\api\\Bulk_SMS_Library.jar
 file.reference.controlsfx-8.40.15.jar=lib\\controlsfx-8.40.15.jar
 file.reference.itextpdf-5.5.13.jar=lib\\itextpdf-5.5.13.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.tilesfx-1.6.5.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
     ${file.reference.itextpdf-5.5.13.jar}:\
-    ${file.reference.controlsfx-8.40.15.jar}
+    ${file.reference.controlsfx-8.40.15.jar}:\
+    ${file.reference.Bulk_SMS_Library.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
